--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="86"
+    android:viewportHeight="100">
+  <group android:scaleX="0.2494"
+      android:scaleY="0.29"
+      android:translateX="32.2758"
+      android:translateY="35.5">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M36.45,0C35.44,0.01 34.48,0.39 33.78,1.06C33.08,1.72 32.69,2.61 32.7,3.53C32.7,8.18 30.96,8.95 27.78,11.27C24.61,13.6 20.01,17.48 20.01,24.45C20.01,24.92 20.1,25.37 20.29,25.8C20.47,26.23 20.75,26.62 21.11,26.95C21.46,27.28 21.88,27.54 22.35,27.72C22.82,27.9 23.31,27.99 23.82,27.99C24.32,27.99 24.82,27.9 25.29,27.72C25.75,27.54 26.18,27.28 26.53,26.95C26.88,26.62 27.16,26.23 27.35,25.8C27.54,25.37 27.63,24.92 27.63,24.45C27.63,19.8 29.37,19.04 32.54,16.72C35.71,14.39 40.32,10.51 40.32,3.53C40.32,3.07 40.23,2.6 40.04,2.17C39.84,1.74 39.56,1.35 39.2,1.02C38.84,0.69 38.41,0.43 37.94,0.25C37.46,0.08 36.96,-0.01 36.45,0ZM51.68,4.65C50.67,4.66 49.71,5.04 49.01,5.71C48.3,6.37 47.92,7.26 47.93,8.18C47.93,9.93 47.56,10.65 47.04,11.33C46.52,12 45.65,12.66 44.38,13.53C43.11,14.4 41.44,15.49 40.06,17.28C38.67,19.08 37.78,21.55 37.78,24.45C37.77,24.92 37.86,25.37 38.05,25.8C38.24,26.23 38.52,26.62 38.87,26.95C39.23,27.28 39.65,27.54 40.12,27.72C40.58,27.9 41.08,27.99 41.59,27.99C42.09,27.99 42.59,27.9 43.05,27.72C43.52,27.54 43.94,27.28 44.3,26.95C44.65,26.62 44.93,26.23 45.12,25.8C45.31,25.37 45.4,24.92 45.39,24.45C45.39,22.71 45.76,21.98 46.28,21.31C46.8,20.63 47.67,19.98 48.94,19.11C50.21,18.24 51.87,17.15 53.26,15.35C54.64,13.55 55.54,11.09 55.54,8.18C55.55,7.72 55.46,7.25 55.26,6.82C55.07,6.39 54.79,6 54.43,5.67C54.07,5.34 53.64,5.08 53.16,4.9C52.69,4.73 52.19,4.64 51.68,4.65ZM8.88,32.59C6.41,32.59 4.04,33.54 2.37,35.19C0.69,36.85 -0.16,39.09 0.03,41.35L3.59,83.9C4.35,92.93 12.69,100 22.58,100H42.6C52.48,100 60.82,92.93 61.58,83.9L61.59,83.73H66.97C77.43,83.73 86,75.88 86,66.29V54.67C86,50.22 81.98,46.54 77.12,46.54H64.71L65.15,41.35C65.33,39.1 64.48,36.86 62.81,35.2C61.13,33.54 58.76,32.59 56.29,32.59H8.88ZM64.12,53.51H77.12C77.87,53.51 78.39,53.99 78.39,54.67V66.29C78.39,72.11 73.32,76.75 66.97,76.75H62.18L64.12,53.51Z"
+        android:fillColor="#21005D"/>
+  </group>
 </vector>
